# nereus

./: .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/_static/: .gitkeep
docs/_templates/: .gitkeep
docs/api/: core.rst  diag.rst  models.rst  plotting.rst  regrid.rst  top_level.rst
docs/development/: changelog.rst  contributing.rst
docs/getting_started/: concepts.rst  installation.rst  quickstart.rst
docs/user_guide/: diagnostics.rst  models.rst  plotting.rst  regridding.rst
examples/: diagnostics_demo.ipynb  fesom_demo.ipynb  fesom_mesh_demo.ipynb  nereus_demo.ipynb
src/nereus/: __init__.py
src/nereus/core/: __init__.py  coordinates.py  grids.py  mesh.py  spatial.py  types.py
src/nereus/diag/: __init__.py  hovmoller.py  ice.py  vertical.py
src/nereus/models/: __init__.py
src/nereus/models/fesom/: __init__.py  functions.py  mesh.py
src/nereus/models/healpix/: __init__.py  mesh.py
src/nereus/models/ifs_tco/: __init__.py  mesh.py
src/nereus/models/nemo/: __init__.py  mesh.py
src/nereus/plotting/: __init__.py  maps.py  projections.py  transect.py
src/nereus/regrid/: interpolator.py
tests/: conftest.py
tests/test_core/: __init__.py  test_coordinates.py  test_grids.py  test_mesh.py  test_spatial.py
tests/test_diag/: __init__.py  test_hovmoller.py  test_ice.py  test_vertical.py
tests/test_models/: __init__.py  test_fesom.py  test_ifs_tco.py
tests/test_plotting/: __init__.py  test_maps.py  test_projections.py  test_transect.py
tests/test_regrid/: __init__.py  test_cache.py  test_interpolator.py
