[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nereus"
version = "0.1.0"
description = "Python module for working with geophysical data from atmospheric and ocean models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nikolay Koldunov" },
]
keywords = ["geophysics", "oceanography", "atmosphere", "climate", "xarray", "regridding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.9",
    "xarray>=2022.6",
    "netCDF4>=1.6",
    "matplotlib>=3.5",
    "cartopy>=0.21",
]

[project.optional-dependencies]
dask = ["dask[array]>=2022.6"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1", "mypy>=1.0"]
all = ["nereus[dask,dev]"]

[project.urls]
Homepage = "https://github.com/koldunovn/nereus"
Documentation = "https://github.com/koldunovn/nereus"
Repository = "https://github.com/koldunovn/nereus"

[tool.hatch.build.targets.wheel]
packages = ["src/nereus"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
